--- a/Commander Web Api/Commander Web Api.csproj
+++ b/Commander Web Api/Commander Web Api.csproj
@@ -5,5 +5,9 @@
     <RootNamespace>Commander_Web_Api</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
