--- a/Commander Web Api/Commander Web Api.csproj
+++ b/Commander Web Api/Commander Web Api.csproj
@@ -14,7 +14,9 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.30" />
+	  <PackageReference Include= "Microsoft.AspNetCore.JsonPatch" version="3.1.30" />
+	  <PackageReference Include= "Microsoft.AspNetCore.Mvc.NewtonsoftJson" version="3.1.30" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.30" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.30">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
